	anymore
	* FIX : keep tag content when editing them in the tag table
	* FIX : correctly keep track of the tag table size
	* FIX : remove 0.3 API support
	* ADD : gzipped downloading
	* ADD : nice painting for water
	* ADD : file->new menu option to start a new map
	* FIX : change current directory when opening a file
	* FIX : surpress drawing artefact when creating a new segment

v0.06 5 dec 2006 
	* FIX : also recognize true/false for oneway tag
	* FIX : correctly update roads when downloading the same road twice
	* ADD : type combobox to set highway tag
	* FIX : no busy waiting for OSM download
	* ADD : progress dialog while downloading from OSM
	* FIX : refresh view immediatly after download
	* FIX : download segments outside original bounding box for roads
	* FIX : don't call QStatusbar methods from a paintEvent
	* FIX : speed up drawing of roads when zoomed out
	* ADD : undo/redo icons + actions added to toolbar
	* FIX : improve speed with a double buffer for static content
	* ADD : change tags on multiple elements at the same time
	* ADD : delete tag tool
	* ADD : download with 0.4 API
	* ADD : upload with 0.4 API
	* ADD : draw arrows on GPX tracks
	* ADD : optionally download trackpoints from OSM
	* ADD : ability to contact OSM at a different port
	* ADD : allow panning with right mouse button from all interactions
	* FIX : keep correct startpoint when changing view during segment drawing
	* ADD : debugging mode
	* FIX : create node bad url
	* ADD : double carriageway tool
	* FIX : upload segments before roads and nodes before segments
	* ADD : draw roundabout tool
	* ADD : easy single way creation
	* FIX : improve speed with large number of trackpoints

v0.05 15 nov 2006
	* ADD : connection roads by dragging end points
	* FIX : don't crash after undoing deletion and doing something else
	* ADD : go to selection interaction after upload/import/open/download
	* FIX : make the Cancel button work in the import OSM progress dialog